--- a/demos.html
+++ b/demos.html
@@ -154,7 +154,7 @@
         </svg> Biblioteca de HistÃ³rias</h2><!-- Filter Controls -->
 		
        <div class="flex items-center gap-2">
-	   <a href="index.html"
+	   <a href="Vocabulario_Ingles_Oficial.html"
        onclick="stopAllAudio()"
        class="px-3 h-[20px] rounded-lg text-sm font-medium transition-all bg-gray-600 text-white shadow-sm hover:bg-black flex items-center justify-center border border-white/10">
        <span class="leading-none">Voltar</span>
@@ -2258,3 +2258,4 @@ function navigateStory(direction) {
 
  </body>
 </html>
+
