--- a/demo.html
+++ b/demo.html
@@ -192,7 +192,7 @@
                 <span>🎮</span> <span>Memória</span>
             </button>
 
-            <a href="demos.html" id="historyBtn" 
+            <a href="demo.html" id="historyBtn" 
     class="hidden bg-[#007BFF] hover:bg-[#0069d9] text-white font-bold py-1.5 px-3 rounded-md text-xs transition duration-150 shadow-sm flex items-center gap-1.5 border-b-2 border-blue-800">
     <span>📖</span> <span>Histórias</span>
 </a>
@@ -4279,3 +4279,4 @@ function navigateCategory(direction) {
 	
 </body>
 </html>
+
